--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-sentence-transformers == 2.2.2
 langchain
 flask
 pypdf
@@ -7,5 +6,8 @@ pinecone[grpc]
 langchain-pinecone
 langchain_community
 langchain_experimental
-langchain-google-genai 
--e .
+langchain-google-genai
+sentence-transformers
+pinecone-notebooks
+pinecone-client
+
